@@ -141,8 +141,10 @@ endef
 # Generate firmware.
 all: checkdirs $(FW_FILE_1) $(FW_FILE_2) $(FW_FILE_FS) $(FW_FILE_CONFIG)
 	$(ECHO) "$(N_LIST_OBJECTS) largest functions:"
+	$(ECHO) "   Num:    Value  Size Type    Bind   Vis      Ndx Name"
 	@$(READELF) -s $(TARGET_AR) | awk '$$4 == "FUNC" { print }' | sort -r -n -k 3 | head -n $(N_LIST_OBJECTS)
 	$(ECHO) "$(N_LIST_OBJECTS) largest objects:"
+	$(ECHO) "   Num:    Value  Size Type    Bind   Vis      Ndx Name"
 	@$(READELF) -s $(TARGET_AR) | awk '$$4 == "OBJECT" { print }' | sort -r -n -k 3 | head -n $(N_LIST_OBJECTS)
 	./$(TOOLS_DIR)/mem_usage.sh $(TARGET) 81920 $(FW_FILE_MAX)
 	$(ECHO) File system size $(FS_SIZE)KB, $$(( $(FS_MAX_SIZE) - $(FS_SIZE) ))KB free of $(FS_MAX_SIZE)KB.
@@ -193,7 +195,7 @@ debug: $(LOG_DIR)
 # Remove the old log
 	> ./debug.log
 	$(TERM_CMD)
-	# Make a copy of the new log before with a saner name.
+# Make a copy of the new log before with a saner name.
 	$(CP) ./debug.log $(LOG_DIR)/$(LOG_FILE)
 
 # Flash and start debugging.
